removed platfornm path
