# lib/routes/allGamesRoute.js
@@ -21,14 +21,15 @@ allGamesRouter.get('/name/:name', async (req, res) => {
     }
 })
 
-allGamesRouter.get('/platform/:platform', async (req, res) => {
-    const allGamesName = await allGamesSchema.find({ platform: req.params.platform})
-    if(allGamesName === null){
-        console.log("No Games Found By that Name")
-    }else{
-        res.json(allGamesName)
-    }
-})
+// Broken
+// allGamesRouter.get('/platform/:platform', async (req, res) => {
+//     const allGamesName = await allGamesSchema.find({ platform: req.params.platform})
+//     if(allGamesName === null){
+//         console.log("No Games Found using that platform")
+//     }else{
+//         res.json(allGamesName)
+//     }
+// })
 
 allGamesRouter.get('/id/:id', async (req, res) => {
     const allGamesId = await allGamesSchema.findById(req.params.id)
